--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,6 @@
 <p class="text-xs-center">Log in</p>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div class="alert alert-{{message.type}}">{{message.text}}</div>
     <div class="form-group"
     [ngClass]="{'has-error': form.get('email').invalid && form.get('email').touched}"
     >
