--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -51,7 +51,8 @@
             </span>
             <span
              class="form-help-text"
-             *ngIf=" form.get('password')['errors']['minlength']"
+             *ngIf=" form.get('password')['errors']['minlength'] &&
+             form.get('password')['errors']['minlength']['requiredLength'] "
              >
                 password length should be more than 
                 {{ form.get('password')['errors']['minlength']['requiredLength'] }} 
@@ -71,7 +72,7 @@
     </div>
     <div class="form-group">
                 <p class="text-muted text-xs-center">
-                    Нет аккаунта? <a href="#">Зарегистрироваться!</a>
+                    Нет аккаунта? <a [routerLink]="'/registration'">Зарегистрироваться!</a>
                 </p>
     </div>
 </form>
