create system component

--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -25,6 +25,11 @@
                             >
                                 email is not correct
                             </span>
+                            <span class="form-help-text"
+                                  *ngIf="form.get('email')['errors']['forbiddenEmail']"
+                            >
+                                email is allready exist
+                            </span>
                         </div>
                     </div>
                     <div class="form-group"
