create base-api component

--- a/src/app/system/bill-page/bill-page.component.html
+++ b/src/app/system/bill-page/bill-page.component.html
@@ -6,14 +6,17 @@
         </h3>
         <div class="pull-right">
           <button class="btn-sm btn btn-primary-outline">
-            <i class="fa fa-refresh"></i>
+            <i class="fa fa-refresh" (click)="onRefresh()"></i>
           </button>
         </div>
 </div>
 <section class="section">
-        <div class="row">
-          <apa-bill-card></apa-bill-card>
-          <apa-currency-card></apa-currency-card>
+    <div class="row text-center" *ngIf="!isLoaded">
+        Loading...
+    </div>
+        <div class="row" *ngIf="isLoaded">
+          <apa-bill-card [bill]="bill" [currency]="currency"></apa-bill-card>
+          <apa-currency-card [currency]="currency"></apa-currency-card>
         </div>
  </section>
 
