create records page component

--- a/src/app/system/records-page/records-page.component.html
+++ b/src/app/system/records-page/records-page.component.html
@@ -11,7 +11,7 @@
         <apa-add-event></apa-add-event>
       </div>
       <div class="col-md-6">
-        <apa-edit-category></apa-edit-category>
+        <apa-add-category (onCategoryAdd)="newCategoryAdded($event)"></apa-add-category>
       </div>
     </div>
     <div class="row">
