--- a/src/app/system/records-page/add-event/add-event.component.html
+++ b/src/app/system/records-page/add-event/add-event.component.html
@@ -1,40 +1,91 @@
 <div class="card">
   <div class="card-header bordered">
     <div class="header-block">
-      <h3 class="title">Добавить событие</h3>
+      <h3 class="title">Add event</h3>
     </div>
   </div>
   <div class="card-block">
-    <form>
+    <div class="alert alert-{{message.type}}"
+         *ngIf="message.text"
+    >
+      {{message.text}}
+    </div>
+    <form #f="ngForm" (ngSubmit)="onSubmit(f)">
       <div class="form-group">
-        <label class="control-label" for="category">Выберите категорию</label>
-        <select class="form-control" id="category">
-          <option>Option one</option>
-          <option>Option two</option>
-          <option>Option three</option>
-          <option>Option four</option>
+        <label class="control-label" for="category">Choose category</label>
+        <select class="form-control"
+                id="category"
+                required
+                [ngModel]="1"
+                name="category"
+        >
+          <option
+            *ngFor="let c of categories"
+            [value]="c.id"
+          >
+            {{c.name}}
+          </option>
         </select>
       </div>
-      <div class="form-group">
-        <label class="control-label">Выберите тип</label>
+      <div class="form-group" *ngFor="let t of types">
+        <label class="control-label">Choose type</label>
         <div>
           <label>
-            <input class="radio" name="radios" type="radio">
-            <span>Доход</span>
-          </label>
-        </div>
-        <div>
-          <label>
-            <input class="radio" name="radios" type="radio" checked>
-            <span>Расход</span>
+            <input class="radio"
+                   name="type"
+                   type="radio"
+                   [value]="t.type"
+                   required
+                   [ngModel]="'outcome'"
+            >
+            <span>{{t.label}}</span>
           </label>
         </div>
       </div>
-      <div class="form-group">
-        <label class="control-label" for="amount">Введите сумму</label>
-        <input type="number" value="0" id="amount" class="form-control">
+      <div class="form-group"
+           [ngClass]="{'has-error': amount.invalid && amount.touched}"
+      >
+        <label class="control-label" for="amount">Input amount</label>
+        <input type="number"
+               value="0"
+               id="amount"
+               class="form-control"
+               name="amount"
+               [ngModel]="0"
+               min="1"
+               #amount="ngModel"
+        >
+        <span
+          class="form-help-text"
+          *ngIf="amount.invalid && amount.touched"
+        >
+          Field can't be empty
+        </span>
       </div>
-      <button type="submit" class="btn btn-primary">Добавить</button>
+      <div class="form-group"
+           [ngClass]="{'has-error': description.invalid && description.touched}"
+      >
+        <label class="control-label" for="description">Input description</label>
+        <input type="text"
+               value="0"
+               id="description"
+               class="form-control"
+               name="description"
+               ngModel
+               #description="ngModel"
+               required
+        >
+        <span
+                class="form-help-text"
+                *ngIf="description.invalid && description.touched"
+        >
+          Field can't be empty
+        </span>
+      </div>
+      <button type="submit"
+              class="btn btn-primary"
+              [disabled]="f.invalid"
+      >Add</button>
     </form>
   </div>
 </div>
