--- a/src/app/system/records-page/records-page.component.html
+++ b/src/app/system/records-page/records-page.component.html
@@ -10,7 +10,7 @@
   <section class="section" *ngIf="isLoaded">
     <div class="row">
       <div class="col-md-6">
-        <apa-add-event></apa-add-event>
+        <apa-add-event [categories]="categories"></apa-add-event>
       </div>
       <div class="col-md-6">
         <apa-add-category (onCategoryAdd)="newCategoryAdded($event)"></apa-add-category>
