add history page children components

--- a/src/app/system/history-page/history-events/history-events.component.html
+++ b/src/app/system/history-page/history-events/history-events.component.html
@@ -29,11 +29,11 @@
             <thead>
             <tr>
               <th>#</th>
-              <th>Сумма</th>
-              <th>Дата</th>
-              <th>Категория</th>
-              <th>Тип</th>
-              <th class="text-lg-center">Действие</th>
+              <th>Amount</th>
+              <th>Date</th>
+              <th>Category</th>
+              <th>Type</th>
+              <th class="text-lg-center">Action</th>
             </tr>
             </thead>
             <tbody>
