--- a/src/app/system/history-page/history-events/history-events.component.html
+++ b/src/app/system/history-page/history-events/history-events.component.html
@@ -8,16 +8,21 @@
           </div>
           <div class="form-inline pull-right m-r-2">
             <div class="form-group">
-              <input type="email" class="form-control" placeholder="Поиск...">
+              <input type="text"
+                     class="form-control"
+                     [placeholder]="searchPlaceholder"
+                     [(ngModel)]="searchValue"
+              >
             </div>
-            <div class="btn-group">
-              <button type="button" class="btn btn-secondary dropdown-toggle ">
-                Параметр
+            <div class="btn-group" apaDropdown>
+              <button type="button" class="btn btn-secondary dropdown-toggle">
+                Criteria
               </button>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" (click)="changeCriteria('amount')">Amount</a>
+                <a class="dropdown-item" (click)="changeCriteria('date')">Date</a>
+                <a class="dropdown-item" (click)="changeCriteria('category')">Category</a>
+                <a class="dropdown-item" (click)="changeCriteria('type')">Type</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Separated link</a>
               </div>
@@ -37,7 +42,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let e of events; let idx = index">
+            <tr *ngFor="let e of events | apaFilter: searchValue:searhField; let idx = index">
               <th scope="row">{{idx + 1}}</th>
               <td>{{e.amount | number: '1.2'}}</td>
               <td>{{e.date | apaMoment:'DD.MM.YYYY HH:mm:ss'}}</td>
