create history filter component

--- a/src/app/system/history-page/history-page.component.html
+++ b/src/app/system/history-page/history-page.component.html
@@ -3,6 +3,11 @@
     <h3 class="title">
       History page <span class="sparkline bar"></span>
     </h3>
+    <div class="pull-right">
+      <button class="btn-sm btn btn-primary-outline">
+        <i class="fa fa-filter" (click)="openFilter()"></i>
+      </button>
+    </div>
   </div>
   <div *ngIf="!isLoaded" class="text-center">Loading...</div>
   <div *ngIf="isLoaded">
@@ -11,6 +16,13 @@
       [categories]="categories"
       [events]="events"
     ></apa-history-events>
-    <apa-history-filter></apa-history-filter>
+
+    <div *ngIf="isFilterVisible">
+      <apa-history-filter
+              (onFilterApply)="onFilterApply($event)"
+              (onFilterCancel)="onFilterCancel()"
+              [categories]="categories"
+      ></apa-history-filter>
+    </div>
   </div>
 
