create guard service, animations

--- a/src/app/system/history-page/history-page.component.html
+++ b/src/app/system/history-page/history-page.component.html
@@ -14,7 +14,7 @@
     <apa-history-chart [data]="chartData"></apa-history-chart>
     <apa-history-events
       [categories]="categories"
-      [events]="events"
+      [events]="filteredEvents"
     ></apa-history-events>
 
     <div *ngIf="isFilterVisible">
