--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,12 @@
 <p class="text-xs-center">Log in</p>
+<div
+        class="alert alert-{{message.type}}"
+        *ngIf="message.text"
+        @fade
+>
+    {{message.text}}
+</div>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="alert alert-{{message.type}}">{{message.text}}</div>
     <div class="form-group"
     [ngClass]="{'has-error': form.get('email').invalid && form.get('email').touched}"
     >
